--- a/.env
+++ b/.env
@@ -10,7 +10,7 @@ DB_HOST=127.0.0.1
 DB_PORT=3306
 DB_DATABASE=project_suite
 DB_USERNAME=root
-DB_PASSWORD=pw4Root
+DB_PASSWORD=
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
