--- a/package.json
+++ b/package.json
@@ -18,8 +18,5 @@
     "lodash": "^4.17.4",
     "vue": "^2.1.10"
   },
-  "dependencies": {
-    "vue-autosize": "^1.0.0",
-    "vue-progressbar": "^0.7.2"
-  }
+  "dependencies": {}
 }
